--- a/hw5StartJS/index.html
+++ b/hw5StartJS/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 style="color:blueviolet; text-align: center;">Start JS</h1>
-    <script src="./js/variables.js"></script>
+    <script src="./learn-js/variables.js"></script>
+    <script src="./hw-js/task1.js"></script>
 </body>
 </html>
