--- a/hw5StartJS/index.html
+++ b/hw5StartJS/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color:blueviolet; text-align: center;">Start JS</h1>
+    <!-- <h1 style="color:blueviolet; text-align: center;">Start JS</h1> -->
     <script src="./learn-js/variables.js"></script>
     <script src="./hw-js/task1.js"></script>
 </body>
