--- a/hw5StartJavaScript/index.html
+++ b/hw5StartJavaScript/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <!-- <h1 style="color:blueviolet; text-align: center;">Start JS</h1> -->
-    <script src="./learn-js/variables.js"></script>
-    <script src="./hw-js/task1.js"></script>
+    <!-- <script src="./learn-js/variables.js"></script> -->
+    <!-- <script src="./hw-js/task1.js"></script> -->
+    <script src="./learn-js/object.js"></script>
 </body>
 </html>
