--- a/hw5StartJavaScript/index.html
+++ b/hw5StartJavaScript/index.html
@@ -9,7 +9,11 @@
 <body>
     <!-- <h1 style="color:blueviolet; text-align: center;">Start JS</h1> -->
     <!-- <script src="./learn-js/variables.js"></script> -->
-    <script src="./hw-js/task1.js"></script>
-    <script src="./learn-js/object.js"></script>
+    <!-- <script src="./learn-js/object.js"></script> -->
+
+
+    <!-- <script src="./hw-js/task1.js"></script> -->
+    <!-- <script src="./hw-js/task2.js"></script> -->
+    <script src="./hw-js/task3.js"></script>
 </body>
 </html>
