09/03/19(finish task-2 and task-3)

--- a/hw5StartJavaScript/index.html
+++ b/hw5StartJavaScript/index.html
@@ -13,7 +13,8 @@
 
 
     <!-- <script src="./hw-js/task1.js"></script> -->
-    <script src="./hw-js/task2.js"></script>
+    <!-- <script src="./hw-js/task2.js"></script> -->
+    <script src="./hw-js/task3.js"></script>
     <!-- <script src="./hw-js/task8.js"></script> -->
 </body>
 </html>
