--- a/hw5StartJavaScript/index.html
+++ b/hw5StartJavaScript/index.html
@@ -12,9 +12,11 @@
     <!-- <script src="./learn-js/object.js"></script> -->
 
 
-    <script src="./hw-js/task1.js"></script>
-    <script src="./hw-js/task2.js"></script>
+    <!-- <script src="./hw-js/task1.js"></script> -->
+    <!-- <script src="./hw-js/task2.js"></script> -->
     <!-- <script src="./hw-js/task3.js"></script> -->
+    <!-- <script src="./hw-js/task4.js"></script> -->
+    <script src="./hw-js/task5.js"></script>
     <!-- <script src="./hw-js/task8.js"></script> -->
 </body>
 </html>
