--- a/hw5StartJavaScript/index.html
+++ b/hw5StartJavaScript/index.html
@@ -12,11 +12,17 @@
     <!-- <script src="./learn-js/object.js"></script> -->
 
 
+    <!-- <script src="./hw-js/trainee.js"></script> -->
     <!-- <script src="./hw-js/task1.js"></script> -->
     <!-- <script src="./hw-js/task2.js"></script> -->
     <!-- <script src="./hw-js/task3.js"></script> -->
     <!-- <script src="./hw-js/task4.js"></script> -->
-    <script src="./hw-js/task5.js"></script>
+    <!-- <script src="./hw-js/task5.js"></script> -->
+    <!-- <script src="./hw-js/task6.js"></script> -->
+    <!-- <script src="./hw-js/task7.js"></script> -->
     <!-- <script src="./hw-js/task8.js"></script> -->
+    <!-- <script src="./hw-js/task9.js"></script> -->
+    <!-- <script src="./hw-js/task10.js"></script> -->
+    <script src="./hw-js/task11.js"></script>
 </body>
 </html>
