--- a/hw6StartJavaScript/index.html
+++ b/hw6StartJavaScript/index.html
@@ -9,6 +9,9 @@
 <body>
     <!-- <script src="./js-hw-2/trainee.js"></script> -->
     <!-- <script src="./js-hw-2/task1.js"></script> -->
-    <script src="./js-hw-2/task7.js"></script>
+    <!-- <script src="./js-hw-2/task2.js"></script> -->
+    <script src="./js-hw-2/task4.js"></script>
+    <!-- <script src="./js-hw-2/task7.js"></script> -->
+    <!-- <script src="./js-hw-2/task12.js"></script> -->
 </body>
 </html>
