--- a/hw6StartJavaScript/index.html
+++ b/hw6StartJavaScript/index.html
@@ -10,7 +10,8 @@
     <!-- <script src="./js-hw-2/trainee.js"></script> -->
     <!-- <script src="./js-hw-2/task1.js"></script> -->
     <!-- <script src="./js-hw-2/task2.js"></script> -->
-    <script src="./js-hw-2/task4.js"></script>
+    <!-- <script src="./js-hw-2/task4.js"></script> -->
+    <script src="./js-hw-2/task6.js"></script>
     <!-- <script src="./js-hw-2/task7.js"></script> -->
     <!-- <script src="./js-hw-2/task12.js"></script> -->
 </body>
