--- a/hw6StartJavaScript/index.html
+++ b/hw6StartJavaScript/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="./js-hw-2/trainee.js"></script> -->
+    <script src="./js-hw-2/trainee.js"></script>
     <!-- <script src="./js-hw-2/task1.js"></script> -->
     <!-- <script src="./js-hw-2/task2.js"></script> -->
     <!-- <script src="./js-hw-2/task4.js"></script> -->
-    <script src="./js-hw-2/task6.js"></script>
+    <!-- <script src="./js-hw-2/task6.js"></script> -->
     <!-- <script src="./js-hw-2/task7.js"></script> -->
     <!-- <script src="./js-hw-2/task12.js"></script> -->
 </body>
