--- a/hw6StartJavaScript/index.html
+++ b/hw6StartJavaScript/index.html
@@ -14,16 +14,18 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
 
-    <!-- <script src="./js-hw-2/trainee.js"></script> -->
+    <script src="./js-hw-2/trainee.js"></script>
     <!-- <script src="./js-hw-2/task1.js"></script> -->
     <!-- <script src="./js-hw-2/task2.js"></script> -->
     <!-- <script src="./js-hw-2/task3.js"></script> -->
     <!-- <script src="./js-hw-2/task4.js"></script> -->
-    <script src="./js-hw-2/task5.js"></script>
+    <!-- <script src="./js-hw-2/task5.js"></script> -->
     <!-- <script src="./js-hw-2/task6.js"></script> -->
     <!-- <script src="./js-hw-2/task7.js"></script> -->
     <!-- <script src="./js-hw-2/task8.js"></script> -->
     <!-- <script src="./js-hw-2/task9.js"></script> -->
+    <!-- <script src="./js-hw-2/task10.js"></script> -->
+    <!-- <script src="./js-hw-2/task11.js"></script> -->
     <!-- <script src="./js-hw-2/task12.js"></script> -->
 </body>
 </html>
